--- a/stacks/cpu-avx512/stack.yaml
+++ b/stacks/cpu-avx512/stack.yaml
@@ -12,7 +12,9 @@ disk-space: 8G
 components:
   - &engine llamacpp-avx512
   - &model model-qwen2-5-vl-7b-instruct-q4-k-m
+  - &mmproject mmproj-qwen2-5-vl-7b-instruct-q8-0
 configurations:
   engine: *engine
   model: *model
+  mmproject: *mmproject
   http.base-path: v1
