--- a/stacks/cpu-tiny/stack.yaml
+++ b/stacks/cpu-tiny/stack.yaml
@@ -15,7 +15,9 @@ disk-space: 8G
 components:
   - &engine llamacpp
   - &model model-qwen2-5-vl-3b-instruct-q4-k-m
+  - &mmproject mmproj-qwen2-5-vl-3b-instruct-q8-0
 configurations:
   engine: *engine
   model: *model
+  mmproject: *mmproject
   http.base-path: v1
