--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -189,7 +189,7 @@ components:
   mmproj-qwen2-5-vl-3b-instruct-q8-0:
     type: standard
     summary: MMProj for Qwen 2.5 VL 3B
-    description: Multi-modal projection for Qwen 2.5 VL 3B
+    description: Multimodal projector for Qwen 2.5 VL 3B
     version: *snap-version
 
   model-qwen2-5-vl-7b-instruct-q4-k-m:
@@ -201,7 +201,7 @@ components:
   mmproj-qwen2-5-vl-7b-instruct-q8-0:
     type: standard
     summary: MMProj Qwen 2.5 VL 7B
-    description: Multi-modal projection for Qwen 2.5 VL 7B
+    description: Multimodal projector for Qwen 2.5 VL 7B
     version: *snap-version
 
 apps:
