--- a/stacks/cuda/stack.yaml
+++ b/stacks/cuda/stack.yaml
@@ -1,7 +1,7 @@
 name: cuda
 description: Generic stack for Nvidia GPUs using CUDA. All major CUDA versions are targeted.
 vendor: Canonical Ltd
-grade: stable
+grade: devel
 devices:
   all:
     - type: cpu
@@ -16,9 +16,9 @@ disk-space: 8G
 components:
   - &engine llamacpp-cuda
   - &model model-qwen2-5-vl-7b-instruct-q4-k-m
-  - &mmproject mmproj-qwen2-5-vl-7b-instruct-q8-0
+  - &mmproj mmproj-qwen2-5-vl-7b-instruct-q8-0
 configurations:
   engine: *engine
   model: *model
-  mmproject: *mmproject
+  multimodel-projector: *mmproj
   http.base-path: v1
