--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -27,7 +27,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: true
+          token: ${{ secrets.SUBMODULE_PAT }}
 
       - name: Download models
         run: |
