--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -24,6 +24,11 @@ jobs:
     runs-on: ${{ matrix.runs.runner }}
 
     steps:
+      # Update snapd as we need a recent one to support components
+      - name: Update snapd
+        run: |
+          sudo snap refresh snapd
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -38,14 +43,19 @@ jobs:
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
 
       - name: Build snap
-        uses: snapcore/action-build@v1
+        # uses: snapcore/action-build@v1
         id: snapcraft
+        run: |
+          cd $GITHUB_WORKSPACE/
+          ./build.sh cpu-tiny
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{env.SNAP_NAME}}_${{github.run_number}}_${{matrix.runs.architecture}}
-          path: ${{ steps.snapcraft.outputs.snap }}
+          path: |
+            $GITHUB_WORKSPACE/*.snap
+            $GITHUB_WORKSPACE/*.comp
           if-no-files-found: error
 
 #      - name: Publish snap
