--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -43,11 +43,8 @@ jobs:
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
 
       - name: Build snap
-        # uses: snapcore/action-build@v1
+        uses: snapcore/action-build@v1
         id: snapcraft
-        run: |
-          cd $GITHUB_WORKSPACE/
-          ./build.sh cpu-tiny
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
