--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -46,6 +46,11 @@ jobs:
         uses: snapcore/action-build@v1
         id: snapcraft
 
+      - name: Find paths
+        run: |
+          echo ${{ steps.snapcraft.outputs.snap }}
+          ls -R $GITHUB_WORKSPACE
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
