--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -46,18 +46,13 @@ jobs:
         uses: snapcore/action-build@v1
         id: snapcraft
 
-      - name: Find paths
-        run: |
-          echo ${{ steps.snapcraft.outputs.snap }}
-          ls -R $GITHUB_WORKSPACE
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{env.SNAP_NAME}}_${{github.run_number}}_${{matrix.runs.architecture}}
           path: |
-            $GITHUB_WORKSPACE/*.snap
-            $GITHUB_WORKSPACE/*.comp
+            *.snap
+            *.comp
           if-no-files-found: error
 
 #      - name: Publish snap
