--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -19,8 +19,8 @@ jobs:
         runs:
           - architecture: amd64
             runner: [ self-hosted, amd64, Linux, noble, large ]
-#          - architecture: arm64
-#            runner: [ self-hosted, ARM64, Linux, noble, large ]
+          - architecture: arm64
+            runner: [ self-hosted, ARM64, Linux, noble, large ]
     runs-on: ${{ matrix.runs.runner }}
 
     steps:
@@ -35,12 +35,12 @@ jobs:
           submodules: true
           token: ${{ secrets.SUBMODULE_PAT }}
 
-#      - name: Download models
-#        run: |
-#          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-3b-instruct-q8-0/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
-#          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-7b-instruct-q8-0/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf
-#          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-3b-instruct-q4-k-m/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf
-#          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
+      - name: Download models
+        run: |
+          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-3b-instruct-q8-0/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
+          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-7b-instruct-q8-0/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf
+          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-3b-instruct-q4-k-m/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf
+          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
 
       - name: Build snap
         uses: snapcore/action-build@v1
