--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         runs:
           - architecture: amd64
-            runner: [ self-hosted, amd64, Linux, noble, large ]
+            runner: [ self-hosted, amd64, Linux, noble, xlarge ]
           - architecture: arm64
             runner: [ self-hosted, ARM64, Linux, noble, large ]
     runs-on: ${{ matrix.runs.runner }}
@@ -56,7 +56,7 @@ jobs:
           if-no-files-found: error
 
       # Requires STORE_LOGIN secret set. Export with:
-      # snapcraft export-login --snaps qwen-vl --channels edge/* --acls package_access,package_push,package_update,package_release --expires 2026-08-01T00:00:00Z
+      # snapcraft export-login --snaps qwen-vl --channels latest/edge/* --acls package_access,package_push,package_update,package_release --expires 2026-08-01T00:00:00Z
       - name: Publish snap
         env:
           SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.STORE_LOGIN }}
