--- a/stacks/cpu-tiny/stack.yaml
+++ b/stacks/cpu-tiny/stack.yaml
@@ -1,5 +1,5 @@
 name: cpu-tiny
-description: A lower accuracy but faster stack for CPUs
+description: Low accuracy but fast inference using CPU
 vendor: Canonical Ltd
 grade: stable
 devices:
