Add tab completion

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -62,6 +62,8 @@ parts:
       - pciutils
       - nvidia-utils # for Nvidia vRAM and Cuda Capability detection
       - clinfo # for Intel GPU vRAM detection
+    organize:
+      bin/stack: bin/qwen-vl
 
   go-chat-client:
     source: https://github.com/jpm-canonical/go-chat-client.git
@@ -203,7 +205,8 @@ components:
 
 apps:
   qwen-vl:
-    command: bin/stack
+    command: bin/qwen-vl
+    completer: bin/completion.bash
     plugs:
       # For hardware detection
       - opengl
