Only use pr-prefix if event number is set

--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -54,8 +54,8 @@ jobs:
           echo "Branch name: ${{ github.ref_name }}"
           echo "Event number: ${{ github.event.number }}"
           
-          if [[ "${{ github.ref_name }}" != "refs/heads/main" ]]; then
-            echo "Not on main branch"
+          if [ -n "${{ github.event.number }}" ]; then
+            echo "Triggered from a PR"
             channel="latest/edge/pr-${{ github.event.number }}"
           fi
           
