Run snap-ci on ready for review

--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -1,6 +1,10 @@
 name: Snap CI
 
 on:
+  pull_request:
+    branches: [ main ]
+    types:
+      - ready_for_review
   push:
     branches: [ main ]
   # Allow manual trigger
