--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -31,6 +31,9 @@ jobs:
         run: |
           sudo snap refresh snapd
 
+      - name: Install Git LFS
+        run: sudo apt-get update && sudo apt-get install -y git-lfs
+
       - name: Checkout code
         uses: actions/checkout@v5
         with:
@@ -43,6 +46,7 @@ jobs:
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-7b-instruct-q8-0/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-3b-instruct-q4-k-m/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
+          git clone https://huggingface.co/turingevo/Qwen2.5-VL-3B-Instruct-openvino-int4 components/model-qwen2-5-vl-3b-instruct-openvino-int4/Qwen2.5-VL-3B-Instruct-openvino-int4
 
       - name: Build snap
         uses: snapcore/action-build@v1
