--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -17,6 +17,7 @@ jobs:
   build:
     name: Build
     strategy:
+      fail-fast: false
       matrix:
         runs:
           - architecture: amd64
