--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -177,6 +177,19 @@ parts:
     organize:
       "*": (component/model-qwen2-5-vl-3b-instruct-ov-int4)
 
+  model-qwen2-5-vl-7b-instruct-ov-int4:
+    source: components/model-qwen2-5-vl-7b-instruct-ov-int4
+    plugin: dump
+    override-build: |
+      mediapipe_graph_path="Qwen2.5-VL-7B-Instruct-openvino-int4/graph.pbtxt"
+      if [ ! -L "$mediapipe_graph_path" ]; then
+        ln -s /tmp/graph.pbtxt "$mediapipe_graph_path"
+      fi
+
+      craftctl default
+    organize:
+      "*": (component/model-qwen2-5-vl-7b-instruct-ov-int4)
+
   opencl-driver:
     # Includes the OpenCL runtime for Intel GPU support
     plugin: nil
@@ -293,6 +306,12 @@ components:
     type: standard
     summary: Qwen 2.5 VL 3B for OpenVINO
     description: Model with 3B parameters in OpenVINO format
+    version: *snap-version
+
+  model-qwen2-5-vl-7b-instruct-ov-int4:
+    type: standard
+    summary: Qwen 2.5 VL 7B for OpenVINO
+    description: Model with 7B parameters in OpenVINO format
     version: *snap-version
 
 apps:
