--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
         with:
+          lfs: true
           submodules: true
           token: ${{ secrets.SUBMODULE_PAT }}
 
