--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 components/model-qwen2-5-vl-7b-instruct-ov-int4/Qwen2.5-VL-7B-Instruct-openvino-int4/** filter=lfs diff=lfs merge=lfs -text
+components/model-qwen2-5-vl-7b-instruct-ov-int4/Qwen2.5-VL-7B-Instruct-int4-npu-ov/** filter=lfs diff=lfs merge=lfs -text
+components/model-qwen2-5-vl-3b-instruct-ov-int4/Qwen2.5-VL-3B-Instruct-int4-npu-ov/** filter=lfs diff=lfs merge=lfs -text
