--- a/stacks/cuda/stack.yaml
+++ b/stacks/cuda/stack.yaml
@@ -1,7 +1,7 @@
 name: cuda
 description: Use Nvidia GPUs via CUDA
 vendor: Canonical Ltd
-grade: devel
+grade: stable
 devices:
   all:
     - type: cpu
