Add read-all to home plug

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -29,6 +29,9 @@ plugs:
     interface: content
     content: npu-libs-2404
     target: $SNAP/npu-libs
+  # To allow sideloading models by root
+  home:
+    read: all
     
 hooks:
   install:
