--- a/stacks/intel-npu/stack.yaml
+++ b/stacks/intel-npu/stack.yaml
@@ -1,7 +1,7 @@
 name: intel-npu
 description: Use Intel NPUs (Core Ultra series)
 vendor: Intel Corporation
-grade: stable
+grade: devel
 devices:
   all:
     - type: cpu
@@ -25,5 +25,4 @@ configurations:
   engine: *e
   model: *m
   target-device: NPU
-  model-name: Qwen2.5-VL-7B-Instruct-int4-npu-ov
   http.base-path: v3
