--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -17,12 +17,13 @@ jobs:
   build:
     name: Build
     strategy:
+      fail-fast: false
       matrix:
         runs:
           - architecture: amd64
-            runner: [ self-hosted, amd64, Linux, noble, xlarge ]
+            runner: [ self-hosted, linux, amd64, xlarge, noble ]
           - architecture: arm64
-            runner: [ self-hosted, ARM64, Linux, noble, large ]
+            runner: [ self-hosted, linux, arm64, xlarge, noble ]
     runs-on: ${{ matrix.runs.runner }}
 
     steps:
@@ -31,9 +32,13 @@ jobs:
         run: |
           sudo snap refresh snapd
 
+      - name: Install Git LFS
+        run: sudo apt-get update && sudo apt-get install -y git-lfs
+
       - name: Checkout code
         uses: actions/checkout@v5
         with:
+          lfs: true
           submodules: true
           token: ${{ secrets.SUBMODULE_PAT }}
 
