--- a/stacks/cuda/stack.yaml
+++ b/stacks/cuda/stack.yaml
@@ -14,11 +14,9 @@ devices:
 memory: 5G
 disk-space: 10G
 components:
-  - &engine llamacpp-cuda
-  - &model model-qwen2-5-vl-7b-instruct-q4-k-m
-  - &mmproj mmproj-qwen2-5-vl-7b-instruct-q8-0
+  - llamacpp-cuda
+  - model-qwen2-5-vl-7b-instruct-q4-k-m
+  - mmproj-qwen2-5-vl-7b-instruct-q8-0
 configurations:
-  engine: *engine
-  model: *model
-  multimodel-projector: *mmproj
   http.base-path: v1
+  gpu-layers: 29
