Rename 'engine' config (component name) to 'runtime'

--- a/engines/intel-cpu/engine.yaml
+++ b/engines/intel-cpu/engine.yaml
@@ -14,7 +14,7 @@ components:
   - &e openvino-model-server
   - &m model-qwen2-5-vl-7b-instruct-ov-int4
 configurations:
-  engine: *e
+  runtime: *e
   model: *m
   target-device: CPU
   http.base-path: v3
