--- a/engines/cpu-tiny/engine.yaml
+++ b/engines/cpu-tiny/engine.yaml
@@ -13,11 +13,11 @@ devices:
 memory: 4G
 disk-space: 8G
 components:
-  - &engine llamacpp
+  - &runtime llamacpp
   - &model model-qwen2-5-vl-3b-instruct-q4-k-m
   - &mmproj mmproj-qwen2-5-vl-3b-instruct-q8-0
 configurations:
-  engine: *engine
+  runtime: *runtime
   model: *model
   multimodel-projector: *mmproj
   http.base-path: v1
