--- a/engines/intel-gpu/engine.yaml
+++ b/engines/intel-gpu/engine.yaml
@@ -202,7 +202,7 @@ components:
   - &e openvino-model-server
   - &m model-qwen2-5-vl-7b-instruct-ov-int4
 configurations:
-  engine: *e
+  runtime: *e
   model: *m
   target-device: GPU
   http.base-path: v3
