--- a/engines/intel-npu/engine.yaml
+++ b/engines/intel-npu/engine.yaml
@@ -22,7 +22,7 @@ components:
   - &e openvino-model-server
   - &m model-qwen2-5-vl-7b-instruct-ov-int4
 configurations:
-  engine: *e
+  runtime: *e
   model: *m
   target-device: NPU
   http.base-path: v3
