Change 'runtime' config to 'server'

--- a/engines/cpu/engine.yaml
+++ b/engines/cpu/engine.yaml
@@ -13,11 +13,11 @@ devices:
 memory: 4G
 disk-space: 8G
 components:
-  - &runtime llamacpp
+  - &server llamacpp
   - &model model-qwen2-5-vl-7b-instruct-q4-k-m
   - &mmproj mmproj-qwen2-5-vl-7b-instruct-q8-0
 configurations:
-  runtime: *runtime
+  server: *server
   model: *model
   multimodel-projector: *mmproj
   http.base-path: v1
