--- a/engines/intel-cpu/engine.yaml
+++ b/engines/intel-cpu/engine.yaml
@@ -11,10 +11,10 @@ devices:
 memory: 5G
 disk-space: 10G
 components:
-  - &e openvino-model-server
+  - &s openvino-model-server
   - &m model-qwen2-5-vl-7b-instruct-ov-int4
 configurations:
-  runtime: *e
+  server: *s
   model: *m
   target-device: CPU
   http.base-path: v3
