--- a/.github/workflows/snap-ci.yaml
+++ b/.github/workflows/snap-ci.yaml
@@ -44,10 +44,16 @@ jobs:
 
       - name: Download models
         run: |
+          # 3B model for llamacpp
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-3b-instruct-q8-0/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
-          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-7b-instruct-q8-0/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-3b-instruct-q4-k-m/Qwen2.5-VL-3B-Instruct-Q4_K_M.gguf
+          # 7B model for llamacpp
+          curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf --output $GITHUB_WORKSPACE/components/mmproj-qwen2-5-vl-7b-instruct-q8-0/mmproj-Qwen2.5-VL-7B-Instruct-Q8_0.gguf
           curl -L https://huggingface.co/ggml-org/Qwen2.5-VL-7B-Instruct-GGUF/resolve/main/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf --output $GITHUB_WORKSPACE/components/model-qwen2-5-vl-7b-instruct-q4-k-m/Qwen2.5-VL-7B-Instruct-Q4_K_M.gguf
+          # 7B model for OpenVINO on CPU or GPU
+          git clone https://huggingface.co/helenai/Qwen2.5-VL-7B-Instruct-ov-int4
+          # 7B model for OpenVINO on NPU
+          git clone https://huggingface.co/helenai/Qwen2.5-VL-7B-Instruct-ov-nf4-npu
 
       - name: Build snap
         uses: canonical/action-build@v1
