--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -171,7 +171,7 @@ parts:
       # This directory is read-only when it is inside a component.
       # By adding a symlink with the file's name inside the model directory, pointing to /tmp,
       # OVMS will follow the symlink during runtime and instead create the file in /tmp.
-      mediapipe_graph_path="Qwen2.5-VL-7B-Instruct-int4-npu-ov/graph.pbtxt"
+      mediapipe_graph_path="Qwen2.5-VL-7B-Instruct-ov-int4/graph.pbtxt"
       if [ ! -L "$mediapipe_graph_path" ]; then
         ln -s /tmp/graph.pbtxt "$mediapipe_graph_path"
       fi
@@ -179,6 +179,19 @@ parts:
       craftctl default
     organize:
       "*": (component/model-qwen2-5-vl-7b-instruct-ov-int4)
+
+  model-qwen2-5-vl-7b-instruct-ov-nf4-npu:
+    source: components/model-qwen2-5-vl-7b-instruct-ov-nf4-npu
+    plugin: dump
+    override-build: |
+      mediapipe_graph_path="Qwen2.5-VL-7B-Instruct-ov-nf4-npu/graph.pbtxt"
+      if [ ! -L "$mediapipe_graph_path" ]; then
+        ln -s /tmp/graph.pbtxt "$mediapipe_graph_path"
+      fi
+
+      craftctl default
+    organize:
+      "*": (component/model-qwen2-5-vl-7b-instruct-ov-nf4-npu)
 
   opencl-driver:
     # Includes the OpenCL runtime for Intel GPU support
@@ -295,8 +308,14 @@ components:
 
   model-qwen2-5-vl-7b-instruct-ov-int4:
     type: standard
-    summary: Qwen 2.5 VL 7B for OpenVINO
-    description: Model with 7B parameters in OpenVINO format
+    summary: Qwen 2.5 VL 7B for Intel CPU and Intel GPU
+    description: Model with 7B parameters in OpenVINO IR format, quantized with INT4
+    version: *snap-version
+
+  model-qwen2-5-vl-7b-instruct-ov-nf4-npu:
+    type: standard
+    summary: Qwen 2.5 VL 7B for Intel NPU
+    description: Model with 7B parameters in OpenVINO IR format, quantized with NF4
     version: *snap-version
 
 apps:
