Enable service by default (#23)

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -317,7 +317,7 @@ apps:
   server:
     command: bin/server.sh
     daemon: simple
-    install-mode: disable
+    restart-delay: 10s
     plugs:
       # For inference and hardware detection (via init)
       - opengl
