--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stack-utils"]
 	path = stack-utils
 	url = https://github.com/canonical/stack-utils.git
+[submodule "famous-models-dev"]
+	path = dev
+	url = https://github.com/canonical/famous-models-dev
